FIX: Routes logic
